# spot-cpp-sdk

./: .gitignore  README.md
.devcontainer/: Dockerfile.amd64  Dockerfile.arm64  Dockerfile.arm64_vcpkg  build.sh  entrypoint.sh
.github/: CODEOWNERS
.github/workflows/: cd.yml
cpp/: CMakeLists.txt  README.md
cpp/bosdyn/client/: README.md
cpp/bosdyn/common/: assert_precondition.cpp  assert_precondition.h  common_header_handling.cpp  common_header_handling.h  compiler_definitions.h  int_wrapper.h  mission_filesystem.h  numbers.h  proto_file.cpp  proto_file.h  robot_time_converter.cpp  robot_time_converter.h  status.cpp  status.h  string_util.cpp  string_util.h  strip_bytes_fields.cpp  strip_bytes_fields.h  success_condition.cpp  success_condition.h  time.cpp  time.h
cpp/bosdyn/math/: README.md  api_common_frames.cpp  api_common_frames.h  frame_helpers.cpp  frame_helpers.h  pose_interpolation.cpp  pose_interpolation.h  proto_math.cpp  proto_math.h
cpp/cmake/: ProjectConfig.cmake.in
cpp/examples/: README.md
cpp/examples/arm_grasp_carry_overrides/: README.md  arm_grasp_carry_overrides.cpp
cpp/examples/arm_manipulation_api_walk_to/: README.md  arm_manipulation_api_walk_to.cpp
cpp/examples/basic_robot_command/: README.md  basic_robot_command.cpp
cpp/examples/get_image/: README.md  get_image.cpp
cpp/examples/joint_control/: CMakeLists.txt  README.md  constants.hpp  joint_api_helper.cpp  joint_api_helper.hpp  noarm_squat.cpp  wiggle_arm_example.cpp
docs/: cpp_release_notes.md
docs/cpp/: README.md  cpp_sdk_differences.md  quickstart.md
(+272 files in other folders)
